phone email added

--- a/interfitproject/templates/base.html
+++ b/interfitproject/templates/base.html
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="{%url 'resume_input'%}">이력서입력</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">이력서리스트</a>
+                <a class="nav-link" href="{%url 'resume_list'%}">이력서리스트</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{%url 'position_input' %}">채용공고등록</a>
