--- a/resumeapp/templates/resume_input.html
+++ b/resumeapp/templates/resume_input.html
@@ -5,8 +5,8 @@
 .bootstrap-select .dropdown-menu.inner{
     height: 280px;
 }
-
 </style>
+
 <div class="jumbotron jumbotron-fluid" style="padding-top:100px;" >
     <div class="container">
       <h1 class="display-4" style="font-size:50px; font-weight:600; color:darkslategray" >이력서 등록</h1>
@@ -131,12 +131,19 @@
                     희망연봉 :
                     <input name="salary" size="10" type="number" min='0' style="margin-left: 18px; margin-top: 10px; width:100px; " value="">(만원)
                     <br>
+                    연락처 :
+                    <input name="phone_number" size="10" type="text" style="margin-left: 33px; margin-top: 10px; width:200px;" value="">
+                    <br>
+                    이메일 :
+                    <input name="email_address" size="10" type="text" style="margin-left: 33px; margin-top: 10px; width:200px;" value="">
+                    <br>
                     <br>
                     경력 상세 
                     <br>
                     <textarea name="resume_detail" cols='135' rows='20' style="margin-left: 10px; margin-top: 10px;" placeholder="상세 사항을 적어주세요 ... " ></textarea>
                     <br>
                     <br>
+                    
 
                     합불여부 :
                     <select name="outcome" class="booking_input booking_input_container" style="margin-left: 18px; margin-top: 10px" >
