--- a/interfitproject/templates/base.html
+++ b/interfitproject/templates/base.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="{%url 'position_input' %}">채용공고등록</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">채용공고리스트</a>
+                <a class="nav-link" href="{%url 'position_list' %}">채용공고리스트</a>
               </li>
 
               {% if user.is_authenticated %}
@@ -62,10 +62,11 @@
 {% endblock %}
 
 
-
+<div class="container" style="padding-top:200px;">
+</div>
 <!-- Footer -->
 
-<footer class="page-footer font-small blue" style="background-color:#212529; bottom:0px; position:fixed; width:100%;">
+<footer class="page-footer font-small blue" style="background-color:#212529; bottom:0px; position:fixed; width:100%; ">
 
 <!-- Copyright -->
 <div class="footer-copyright text-center py-3" style="color:white">© 2019 Copyright : 
