--- a/positionapp/templates/position_list.html
+++ b/positionapp/templates/position_list.html
@@ -5,29 +5,27 @@
 <body>
     <div class="jumbotron jumbotron-fluid" style="padding-top:100px;" >
         <div class="container">
-            <h1 class="display-4" style="font-size:50px; font-weight:600; color:darkslategray" >등록된 이력서 </h1>
-            <p class="lead"> &nbsp;&nbsp; 등록된 이력서를 확인해 주세요. </p>
-            <h6> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 현재 등록된 이력서 : {{resume_count}}</h6>
+            <h1 class="display-4" style="font-size:50px; font-weight:600; color:darkslategray" >등록된 채용공고 </h1>
+            <p class="lead"> &nbsp;&nbsp; 등록된 채용공고를 확인해 주세요. </p>
+            <h6> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 현재 등록된 채용공고 : {{recruitlist_count}}</h6>
 
-            <form action="{% url 'resume_search' %}" method="get" style="padding-left:25px; margin-top:15px">
+            <form action="{% url 'position_search' %}" method="get" style="padding-left:25px; margin-top:15px">
                 <input type="text" name="q" value="{{ q }}">
                 <input type="submit" value="검색">
             </form>
-        
+
         </div>
     </div>
     
-    {% for resumelist in posts %}
+    {% for recruitlist in posts %}
     <div class="container">
         <div class="card" style="padding:7px" >
             <div class="card-body">
-            <a href="{% url 'resume_detail' resumelist.id %}"> <h5 class="card-title">{{resumelist.resume_name}}</h5></a>
-            <h6 class="card-subtitle mb-2 text-muted">{{resumelist.born_year}} - {{resumelist.sex}} </h6>
-            <h6 class="card-subtitle mb-2 text-muted">{{resumelist.phone_number}}  </h6>
-            <h6 class="card-subtitle mb-2 text-muted">{{resumelist.email_address}} </h6>
-            <h6 class="card-subtitle mb-2 text-muted">세부직무 : {{resumelist.position_detail}}</h6>
-            <h6 class="card-subtitle mb-2 text-muted">등록시간 : {{resumelist.pub_date}}</h6>
-            <p class="card-text">{{resumelist.summary}} ... </p>
+            <a href=" {% url 'position_detail' recruitlist.id %} "> <h5 class="card-title">{{recruitlist.recruit_company_name}}</h5></a>
+            <h5 class="card-title">{{recruitlist.summary}}</h5>
+            <h6 class="card-subtitle mb-2 text-muted"> 직무 : {{recruitlist.recruit_position}} - {{recruitlist.recruit_position_detail}} </h6>
+            <h6 class="card-subtitle mb-2 text-muted"> 직급 : {{recruitlist.recruit_position2}}</h6> 
+            <p class="card-text">{{recruitlist.recruit_position_detail2}} ... </p>
             </div>
         </div>
     </div>
@@ -50,7 +48,6 @@
           </li>
         </ul>
     </nav>
-
 
 </body>
 
