--- a/resumeapp/templates/resume_input.html
+++ b/resumeapp/templates/resume_input.html
@@ -46,52 +46,57 @@
             <div class="card-body">
               <h5 class="card-title" style="font-weight: 600;"  >지원 포지션 정보</h5>
               <h6 class="card-subtitle mb-2 text-muted">포지션 분류</h6>
-
-                지원직무 :
-                <select class="selectpicker" name = 'position'  data-live-search="true" style="margin-left: 10px">
-                    <option value="null" selected  >해당 없음</option>
-                    {% for position in position %}
-                        <option value="{{position}}" style="color: black">{{position}}</option>
-                    {% endfor %}
-                </select>
-                <br>
+                
                 지원직급 :
-                <select class="selectpicker" name = 'position2' data-live-search="true" style="margin-left: 10px">
+                <select name = 'position2'  style="margin-left: 10px">
                     <option value="null" selected  >해당 없음</option>
                     {% for position2 in position2 %}
                         <option value="{{position2}}" style="color: black">{{position2}}</option>
                     {% endfor %}
                 </select>
                 <br>
-                직무상세 :
-                <select class="selectpicker" name = 'position_detail' data-live-search="true" style="margin-left: 10px">
-                    <option value="null" selected  >해당 없음</option>
-                    <optgroup label="경영지원">
-                    {% for position_detail1 in position_detail1 %}
-                        <option value="{{position_detail1}}" style="color: black">{{position_detail1}}</option>
+                지원직무 :
+                <select id="position" name = 'position'   style="margin-left: 10px; margin-top:10px">
+                    <option value="null">해당 없음</option>
+                    {% for position in position %}
+                        <option value="{{position}}" style="color: black">{{position}}</option>
                     {% endfor %}
-                    </optgroup>
-                    <optgroup label="IT개발">
-                    {% for position_detail2 in position_detail2 %}
-                        <option value="{{position_detail2}}" style="color: black">{{position_detail2}}</option>
-                    {% endfor %}
-                    </optgroup>
-                    <optgroup label="생산/제조/연구개발">
-                    {% for position_detail3 in position_detail3 %}
-                        <option value="{{position_detail3}}" style="color: black">{{position_detail3}}</option>
-                    {% endfor %}
-                    </optgroup>
-                    <optgroup label="영업/마케팅">
-                    {% for position_detail4 in position_detail4 %}
-                        <option value="{{position_detail4}}" style="color: black">{{position_detail4}}</option>
-                    {% endfor %}
-                    </optgroup>
-                    <optgroup label="전문직/특수직무">
-                    {% for position_detail5 in position_detail5 %}
-                        <option value="{{position_detail5}}" style="color: black">{{position_detail5}}</option>
-                    {% endfor %}
-                    </optgroup>
                 </select>
+                <br>
+                직무상세 :
+                <select id="position_detail"  name = 'position_detail'  style="margin-left: 10px; margin-top:10px">
+                    <option class="null" value="null">직무를 선택하세요.</option>
+                    <!-- <optgroup label="경영지원"> -->
+                    {% for position_detail1 in position_detail1 %}
+                        <option class = "경영지원" value="{{position_detail1}}" style="color: black">{{position_detail1}}</option>
+                    {% endfor %}
+                    <!-- </optgroup> -->
+                    <!-- <optgroup label="IT개발"> -->
+                    {% for position_detail2 in position_detail2 %}
+                        <option class = "IT개발" value="{{position_detail2}}" style="color: black">{{position_detail2}}</option>
+                    {% endfor %}
+                    <!-- </optgroup> -->
+                    <!-- <optgroup label="생산/제조/연구개발"> -->
+                    {% for position_detail3 in position_detail3 %}
+                        <option class = "연구개발(R&D)/생산/제조" value="{{position_detail3}}" style="color: black">{{position_detail3}}</option>
+                    {% endfor %}
+                    <!-- </optgroup> -->
+                    <!-- <optgroup label="영업/마케팅"> -->
+                    {% for position_detail4 in position_detail4 %}
+                        <option class = "영업/마케팅" value="{{position_detail4}}" style="color: black">{{position_detail4}}</option>
+                    {% endfor %}
+                    <!-- </optgroup> -->
+                    <!-- <optgroup label="전문직/특수직무"> -->
+                    {% for position_detail5 in position_detail5 %}
+                        <option class = "전문직/특수직무" value="{{position_detail5}}" style="color: black">{{position_detail5}}</option>
+                    {% endfor %}
+                    <!-- </optgroup> -->
+                </select>
+                <script src="//code.jquery.com/jquery.min.js"></script>
+                <script src='//rawgit.com/tuupola/jquery_chained/master/jquery.chained.min.js'></script>
+                <script>
+                    $("#position_detail").chained("#position");
+                </script>
                 <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
             </div>
         </div>
@@ -128,8 +133,8 @@
                     총 경력 :
                     <input name="work_year" size="10" type="number" min='0' max='1000' style="margin-left: 30px; margin-top: 10px; width:100px; " value="">
                     <br>
-                    희망연봉 :
-                    <input name="salary" size="10" type="number" min='0' style="margin-left: 18px; margin-top: 10px; width:100px; " value="">(만원)
+                    평균 근속연수 :
+                    <input name="work_year_avg" size="10" type="number" min='0' max='1000' style="margin-left: 5px; margin-top: 10px; width:100px; " value="">
                     <br>
                     연락처 :
                     <input name="phone_number" size="10" type="text" style="margin-left: 33px; margin-top: 10px; width:200px;" value="">
@@ -143,8 +148,22 @@
                     <textarea name="resume_detail" cols='135' rows='20' style="margin-left: 10px; margin-top: 10px;" placeholder="상세 사항을 적어주세요 ... " ></textarea>
                     <br>
                     <br>
-                    
-
+                    희망연봉 :
+                    <input name="salary" size="10" type="number" min='0' style="margin-left: 18px; margin-top: 10px; width:100px; " value="">(만원)
+                    <br>
+                    연봉 적합도 :
+                    <select name="salary_fit" class="booking_input booking_input_container" style="margin-left: 18px; margin-top: 10px" >
+                        <option value="1" >Yes</option>
+                        <option value="0" >No</option>
+                    </select>
+                    <br>
+                    직무 적합도 :
+                    <select name="job_fit" class="booking_input booking_input_container" style="margin-left: 18px; margin-top: 10px" >
+                        <option value="3" >상</option>
+                        <option value="2" >중</option>
+                        <option value="1" >하</option>
+                    </select>
+                    <br>
                     합불여부 :
                     <select name="outcome" class="booking_input booking_input_container" style="margin-left: 18px; margin-top: 10px" >
                         <option value="null" selected >없음</option>
