--- a/resumeapp/templates/resume_update.html
+++ b/resumeapp/templates/resume_update.html
@@ -26,10 +26,11 @@
               <h6 class="card-subtitle mb-2 text-muted">지원 회사 분류  </h6>
                 지원회사 :
                 <select name = 'company' class="selectpicker" data-live-search="true" style="margin-left: 10px">
-                    <option value="null" selected  >해당 없음</option>
+                    <option value="{{updates.company}}" selected >{{updates.company}}</option>
                     {% for company_list in company_list %}
                         <option value="{{company_list}}" style="color: black">{{company_list}}</option>
                     {% endfor %}
+                    <option value="null" >해당 없음</option>
                 </select>
                 <br>
             </div>
@@ -40,51 +41,59 @@
               <h5 class="card-title" style="font-weight: 600;"  >지원 포지션 정보</h5>
               <h6 class="card-subtitle mb-2 text-muted">포지션 분류</h6>
 
-                지원직무 :
-                <select class="selectpicker" name = 'position'  data-live-search="true" style="margin-left: 10px">
-                    <option value="null" selected  >해당 없음</option>
-                    {% for position in position %}
-                        <option value="{{position}}" style="color: black">{{position}}</option>
-                    {% endfor %}
-                </select>
-                <br>
                 지원직급 :
-                <select class="selectpicker" name = 'position2' data-live-search="true" style="margin-left: 10px">
-                    <option value="null" selected  >해당 없음</option>
+                <select name = 'position2' style="margin-left: 10px">
+                    <option value="{{updates.position2}}" >{{updates.position2}}</option>
                     {% for position2 in position2 %}
                         <option value="{{position2}}" style="color: black">{{position2}}</option>
                     {% endfor %}
+                    <option value="null" >해당 없음</option>
+                </select>
+                <br>
+                지원직무 :
+                <select id="position" name = 'position'  style="margin-left: 10px; margin-top:10px">
+                    <option value="{{updates.position}}">{{updates.position}}</option>
+                    {% for position in position %}
+                        <option value="{{position}}" style="color: black">{{position}}</option>
+                    {% endfor %}
+                    <option value="null" >해당 없음</option>
                 </select>
                 <br>
                 직무상세 :
-                <select class="selectpicker" name = 'position_detail' data-live-search="true" style="margin-left: 10px">
-                    <option value="null" selected  >해당 없음</option>
-                    <optgroup label="경영지원">
+                <select id="position_detail"  name = 'position_detail' style="margin-left: 10px; margin-top:10px">
+                    <option class = "{{updates.position}}" value="{{updates.position_detail}}">{{updates.position_detail}}</option>
+                    <!-- <optgroup label="경영지원"> -->
                     {% for position_detail1 in position_detail1 %}
-                        <option value="{{position_detail1}}" style="color: black">{{position_detail1}}</option>
+                        <option class ="경영지원" value="{{position_detail1}}" style="color: black">{{position_detail1}}</option>
                     {% endfor %}
-                    </optgroup>
-                    <optgroup label="IT개발">
+                    <!-- </optgroup> -->
+                    <!-- <optgroup label="IT개발"> -->
                     {% for position_detail2 in position_detail2 %}
-                        <option value="{{position_detail2}}" style="color: black">{{position_detail2}}</option>
+                        <option class ="IT개발" value="{{position_detail2}}" style="color: black">{{position_detail2}}</option>
                     {% endfor %}
-                    </optgroup>
-                    <optgroup label="생산/제조/연구개발">
+                    <!-- </optgroup> -->
+                    <!-- <optgroup label="생산/제조/연구개발"> -->
                     {% for position_detail3 in position_detail3 %}
-                        <option value="{{position_detail3}}" style="color: black">{{position_detail3}}</option>
+                        <option class="연구개발(R&D)/생산/제조" value="{{position_detail3}}" style="color: black">{{position_detail3}}</option>
                     {% endfor %}
-                    </optgroup>
-                    <optgroup label="영업/마케팅">
+                    <!-- </optgroup> -->
+                    <!-- <optgroup label="영업/마케팅"> -->
                     {% for position_detail4 in position_detail4 %}
-                        <option value="{{position_detail4}}" style="color: black">{{position_detail4}}</option>
+                        <option class="영업/마케팅" value="{{position_detail4}}" style="color: black">{{position_detail4}}</option>
                     {% endfor %}
-                    </optgroup>
-                    <optgroup label="전문직/특수직무">
+                    <!-- </optgroup> -->
+                    <!-- <optgroup label="전문직/특수직무"> -->
                     {% for position_detail5 in position_detail5 %}
-                        <option value="{{position_detail5}}" style="color: black">{{position_detail5}}</option>
+                        <option class="전문직/특수직무" value="{{position_detail5}}" style="color: black">{{position_detail5}}</option>
                     {% endfor %}
-                    </optgroup>
+                    <option class="null" value="null" >직무를 선택하세요.</option>
+                    <!-- </optgroup> -->
                 </select>
+                <script src="//code.jquery.com/jquery.min.js"></script>
+                <script src='//rawgit.com/tuupola/jquery_chained/master/jquery.chained.min.js'></script>
+                <script>
+                    $("#position_detail").chained("#position");
+                </script>
                 <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
             </div>
         </div>
@@ -100,7 +109,7 @@
                     <br>
                     성별 :
                     <select name="sex" class="booking_input booking_input_container" style="margin-left: 50px; margin-top: 10px; width:100px;" required >
-                        <option value="" selected disabled hidden>선택</option>
+                        <option value="{{updates.sex}}" selected>{{updates.sex}}</option>
                         {% for sex in sex %}
                             <option value="{{sex}}" style="color: black">{{sex}}</option>
                         {% endfor %}
@@ -112,7 +121,7 @@
                     <br>
                     학력사항 :
                     <select name="final_edu" class="booking_input booking_input_container" style="margin-left: 18px; margin-top: 10px; width:100px;" required>
-                        <option value="" selected disabled hidden>선택</option>
+                        <option value="{{updates.final_edu}}" selected>{{updates.final_edu}}</option>
                         {% for edu in edu %}
                             <option value="{{edu}}" style="color: black">{{edu}}</option>
                         {% endfor %}
@@ -121,8 +130,8 @@
                     총 경력 :
                     <input name="work_year" size="10" type="number" min='0' max='1000' style="margin-left: 30px; margin-top: 10px; width:100px; " value="{{updates.work_year}}">
                     <br>
-                    희망연봉 :
-                    <input name="salary" size="10" type="number" min='0' style="margin-left: 18px; margin-top: 10px; width:100px; " value="{{updates.salary}}">(만원)
+                    평균 근속연수 :
+                    <input name="work_year_avg" size="10" type="number" min='0' max='1000' style="margin-left: 5px; margin-top: 10px; width:100px; " value="{{updates.work_year_avg}}">
                     <br>
                     연락처 :
                     <input name="phone_number" size="10" type="text" style="margin-left: 33px; margin-top: 10px; width:200px;" value="{{updates.phone_number}}">
@@ -136,14 +145,29 @@
                     <textarea name="resume_detail" cols='135' rows='20' style="margin-left: 10px; margin-top: 10px;" placeholder="상세 사항을 적어주세요 ... " >{{updates.resume_detail}}</textarea>
                     <br>
                     <br>
-                    
-
+                    희망연봉 :
+                    <input name="salary" size="10" type="number" min='0' style="margin-left: 18px; margin-top: 10px; width:100px; " value="{{updates.salary}}">(만원)
+                    <br>
+                    연봉 적합도 :
+                    <select name="salary_fit" class="booking_input booking_input_container" style="margin-left: 18px; margin-top: 10px" >
+                        <option value="1" >Yes</option>
+                        <option value="0" >No</option>
+                    </select>
+                    <br>
+                    직무 적합도 :
+                    <select name="job_fit" class="booking_input booking_input_container" style="margin-left: 18px; margin-top: 10px" >
+                        <option value="3" >상</option>
+                        <option value="2" >중</option>
+                        <option value="1" >하</option>
+                    </select>
+                    <br>
                     합불여부 :
                     <select name="outcome" class="booking_input booking_input_container" style="margin-left: 18px; margin-top: 10px" >
-                        <option value="null" selected >없음</option>
+                        <option value="{{updates.outcome}}" selected >{{updates.outcome}}</option>
                         {% for outcome in outcome %}
                             <option value="{{outcome}}" style="color: black">{{outcome}}</option>
                         {% endfor %}
+                        <option value="null" >없음</option>
                     </select>
             </div>
         </div>
