--- a/resumeapp/templates/resume_input.html
+++ b/resumeapp/templates/resume_input.html
@@ -153,15 +153,17 @@
                     <br>
                     연봉 적합도 :
                     <select name="salary_fit" class="booking_input booking_input_container" style="margin-left: 18px; margin-top: 10px" >
-                        <option value="1" >Yes</option>
-                        <option value="0" >No</option>
+                        <option value="null" >해당없음</option>
+                        <option value="yes" >yes</option>
+                        <option value="no" >no</option>
                     </select>
                     <br>
                     직무 적합도 :
                     <select name="job_fit" class="booking_input booking_input_container" style="margin-left: 18px; margin-top: 10px" >
-                        <option value="3" >상</option>
-                        <option value="2" >중</option>
-                        <option value="1" >하</option>
+                        <option value="null" >해당없음</option>
+                        <option value="상" >상</option>
+                        <option value="중" >중</option>
+                        <option value="하" >하</option>
                     </select>
                     <br>
                     합불여부 :
