--- a/resumeapp/templates/resume_input.html
+++ b/resumeapp/templates/resume_input.html
@@ -133,7 +133,7 @@
                     총 경력 :
                     <input name="work_year" size="10" type="number" min='0' max='1000' style="margin-left: 30px; margin-top: 10px; width:100px; " value="">
                     <br>
-                    평균 근속연수 :
+                    이직횟수 :
                     <input name="work_year_avg" size="10" type="number" min='0' max='1000' style="margin-left: 5px; margin-top: 10px; width:100px; " value="">
                     <br>
                     연락처 :
