--- a/resumeapp/templates/resume_detail.html
+++ b/resumeapp/templates/resume_detail.html
@@ -10,6 +10,7 @@
         <h6 class="card-title"> 연락처 : {{resumedetail.phone_number}} </h6>
         <h6 class="card-title"> 이메일 : {{resumedetail.email_address}} </h6>
         <h6 class="card-title"> 직무 : {{resumedetail.position_detail}} </h6>
+        <h6 class="card-title"> 직급 : {{resumedetail.position2}} </h6>
         <h6 class="card-title"> 연봉 : {{resumedetail.salary}} (만) </h6>
         <br>
         <h5 class="card-title" style="font-size:20px; font-weight:800" >세부 경력 : </h6>
