--- a/resumeapp/templates/resume_index.html
+++ b/resumeapp/templates/resume_index.html
@@ -11,11 +11,11 @@
                 </div>
             </h1>
             <div class="container">  
-                <p class="lead">InterFit - 구직자 추천 </p>
+                <p class="lead">InterFit - 인재 추천 </p>
             </div>
             <div class="container">
                 <hr class="my-4">
-                <p>DeepLearning 구직자 추천 서비스</p>
+                <p>DeepLearning 인재 추천 서비스</p>
                 <p>문의 사항이 있으면 자유롭게 문의 해 주세요.</p>
                 <p>배포테스트</p>
             </div>
